Fri Aug  4 10:55:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/GNUmakefile: Removed NSAllocateObject.m and
	NSDeallocateObject.m (contents merged into NSObject.m).
	* src/NSObject.m: Modified to perform storage of retain counts local
	to the objects concerned in order to speed up performance - also
	modified to cache an objects zone with it - in order to maintain
	(or better) current performance when we get the NSZone code fixed
	to work with malloced memory.
	* src/include/NSObjCRuntime.h: Removed NSDebugLog()
	* src/include/NSDebug.h: Added new version of NSDebugLog()
	* src/include/NSProcessInfo.h: Added [-debugArray] method.
	* src/NSProcessInfo.m: Added [-debugArray] method and modified to
	parse arguments list and remove debug options, putting them in a
	mutable array (returned by [-debugArray]).
	* src/externs.m: Removed NSDebugLogging.
	* src/NSBundle.m: Modified to use new version of NSDebugLog().

Thu Aug  3 15:35:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/include/NSGCString.h: Added _hash instance variable.
	* src/include/NSGString.h: Added _hash instance variable.
	* src/NSGCString.m: Added implementation of [-hash] to handle caching
	of strings hash value, also added implementation of a few other
	methods for the sake of performance.  Modified NSGMutableCString
	methods to reset hash cache when string is modified.
	* src/NSGString.m: Added implementation of [-hash] to handle caching
	of strings hash value.  Modified NSGMutableString methods to reset
	hash cache when string is modified.
	* src/NSString.m: Misc performance hacks - use alloca() rather than
	malloc/free where possible etc.
	YMMV, but the above changes got me a 20% performance improvement in
	the app I was working with.
	* src/o_map.m:  Don't use o_map_key_callbacks() - access the field
	in the structure directly to avoid the function-call overhead as this
	function was being called LOTS of times.  Only a tiny performance